istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bg-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: bg
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bg-vs
spec:
  hosts:
  - "*"  
  gateways:
  - bg-gateway
  http:
  - route:
    - destination:
        host: green-deploy-green
        port:
          number: 80
      weight: 100
